# LD45

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: Atmosphere.frag  Corona.frag  Orbit.frag
src/: Application.cpp  Application.hpp  BaseState.cpp  BaseState.hpp  BaseSystem.cpp  BaseSystem.hpp  CMakeLists.txt  DebugView.cpp  DebugView.hpp  EntityManager.cpp  EntityManager.hpp  Math.hpp  ResourceManager.cpp  ResourceManager.hpp  Spinor.hpp  StarSystemGenerator.cpp  StarSystemGenerator.hpp  StateManager.cpp  StateManager.hpp  Util.hpp  main.cpp
src/Components/: Acceleration.hpp  Atmosphere.hpp  CelestialBody.hpp  Colony.hpp  DelayedAction.hpp  Friction.hpp  GateShape.hpp  GravityWell.hpp  HoleShape.hpp  JumpConnection.hpp  Physical.hpp  PlanetShape.hpp  PlayerInput.hpp  Position.hpp  Renderables.hpp  Rotation.hpp  SatteliteBody.hpp  StarField.hpp  StarShape.hpp  StationShape.hpp  TradeJump.hpp  UIButton.hpp  UIComponent.hpp  UIDialog.hpp  UIText.hpp  Velocity.hpp  VisibleVelocity.hpp
src/Components/Tags/: CameraTag.hpp  InFaction.hpp  InSystem.hpp  JumpCapable.hpp  SystemCore.hpp  TracedOrbit.hpp
src/Events/: InputEvent.hpp  OrbitRepair.hpp  UIButtonClicked.hpp
src/Ships/: BasicShip.cpp  BasicShip.hpp
src/States/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp
src/Systems/: CelestialRenderSystem.cpp  CelestialRenderSystem.hpp  InputSystem.cpp  InputSystem.hpp  LogicSystem.cpp  LogicSystem.hpp  OrbitalSystem.cpp  OrbitalSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderLerpSystem.cpp  RenderLerpSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  UIRenderSystem.cpp  UIRenderSystem.hpp
